[package]
name = "hackclub_auth_api"
version = "0.0.1"
edition = "2024"

[dependencies]
jsonwebtoken = {version="10.2.0",features=["rust_crypto"]}
reqwest = { version = "0.12.26", features = ["json"] }
serde = "1.0.228"
toml = "0.9.8"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"
