[package]
name = "hackclub_auth_api"
version = "0.0.9"
edition = "2024"
repository = "https://github.com/YoussefDevPro/HCA_api"
keywords = ["hackclub", "hc", "hca"]
categories = ["development-tools"]
description = "a crate to interact with hackclubs oauth api, its unoficial :p"
license = "MIT"

[dependencies]
jsonwebtoken = {version="10.2.0",features=["rust_crypto"]}
reqwest = { version = "0.12.26", features = ["json"] }
serde = "1.0.228"
toml = "0.9.8"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
